--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react-jsx",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
+		"module": "ESNext",
     "target": "ES2019",
     "strict": true,
     "allowJs": true,
