--- a/package.json
+++ b/package.json
@@ -3,49 +3,51 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual",
+    "build": "vite build && vite build --ssr",
+    "dev": "vite dev",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.3.0",
     "@fontsource-variable/inter": "^5.0.15",
     "@fontsource-variable/nunito": "^5.0.16",
     "@portabletext/react": "^3.0.11",
-    "@remix-run/css-bundle": "^2.1.0",
-    "@remix-run/node": "^2.1.0",
-    "@remix-run/react": "^2.1.0",
+    "@remix-run/node": "^2.2.0",
+    "@remix-run/react": "^2.2.0",
     "@sanity/asset-utils": "^1.3.0",
-    "@sanity/client": "^6.7.0",
+    "@sanity/client": "^6.8.5",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.18.1",
-    "@vercel/remix": "2.1.0",
+    "@sanity/vision": "^3.19.3",
+    "@vercel/remix": "2.2.0",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
-    "groq": "^3.18.1",
-    "isbot": "^3.7.0",
-    "lucide-react": "^0.289.0",
+    "framer-motion": "^10.16.5",
+    "groq": "^3.19.3",
+    "isbot": "^3.7.1",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.18.1",
-    "sanity-plugin-media": "^2.2.2",
+    "sanity": "^3.19.3",
+    "sanity-plugin-media": "^2.2.4",
     "sanity-plugin-prefixed-slug": "^2.0.0",
-    "sanity-plugin-simpler-color-input": "^1.1.0",
-    "tailwind-merge": "^1.14.0",
+    "sanity-plugin-simpler-color-input": "^1.3.1",
+    "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.1.0",
-    "@remix-run/eslint-config": "^2.1.0",
-    "@remix-run/serve": "^2.1.0",
+    "@remix-run/dev": "^2.2.0",
+    "@remix-run/eslint-config": "^2.2.0",
+    "@remix-run/serve": "^2.2.0",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
-    "eslint": "^8.52.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "eslint": "^8.53.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
     "node": ">=14"
